[package]
name = "csc411_rpegio"
version = "0.2.0"
edition = "2021"
authors = ["Isaac Chen"]
description = "A collection functions to handle rpeg data i/o. Intended for use in URI's CSC 411 class."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
